# corun

./: .gitignore  CLAUDE.md  Corun CLI - Spec.md  DOCS.md  Guide.md  MANIFEST.in  README.developer.md  README.md  pyproject.toml  requirements.txt  setup.py
.beads/: config.yaml  issues.jsonl
.claude/: settings.local.json
addons/app_list/: README.md  ls.sh  metadata.json  size.sh
addons/brew/: README.md  metadata.json  package.sh
addons/sys_info/: README.md  cpu.sh  mem.sh  metadata.json
docs/plans/: 2026-02-03-readme-restructure-design.md
src/: __init__.py  cli.py
src/corun/: __init__.py  completion.py  executor.py  main.py  models.py  scanner.py
src/utils/: __init__.py  library_manager.py  shell.py
tests/: __init__.py  test_cli.py  test_library.py
