[project]
name = "corun"
version = "0.0.1"
description = "Command Runner - CLI tool để quản lý và chạy shell scripts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Corun Community" }]
keywords = ["cli", "shell", "scripts", "automation"]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
corun = "corun.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/corun"]

[tool.hatch.build.targets.sdist]
include = ["src/corun"]
